orario-cluster/k8s/dash_yaml/05_dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dashboard.local`)
    kind: Rule
    middlewares:
    - name: dashboard-auth
      namespace: kubernetes-dashboard
    services:
    - name: kubernetes-dashboard
      port: 443
      scheme: https
      serversTransport: dashboard-transport
  tls: {}  # TLS terminato da Traefik (niente passthrough su IngressRoute HTTP)
